--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 div {
-	border:1px solid red;
+	border:1px solid black;
 }
 
 
 #absoluteContainer {
 	width: 100%;
-	height:100%;
+	min-height:100%;
 }
 
 /*-----Main Content-----*/
