--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,11 @@ div {
 	border:1px solid black;
 }
 
-
+.container {
+	padding-right: 0px;
+	padding-left: 0px;
+	margin: 0px 0px 0px 0px;
+}
 #absoluteContainer {
 	width: 100%;
 	min-height:100%;
