--- a/css/style.css
+++ b/css/style.css
@@ -2,20 +2,27 @@ div {
 	border:1px solid black;
 }
 
+body,html{
+  height:100%;
+}
+
 .container {
 	padding-right: 0px;
 	padding-left: 0px;
-	margin: 0px 0px 0px 0px;
+	margin-right: 0px;
+	margin-left: 0px;
+	width: 100%;
 }
 #absoluteContainer {
 	width: 100%;
-	min-height:100%;
+	height:100%;
 }
 
 /*-----Main Content-----*/
 #mainContent {
 	width: 100%;
 	height: 100%;
+	background-image: url("../images/backgrounds/astroids.png");
 }
 
 #mainContent > .container {
