--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,8 @@ body,html{
 	width: 100%;
 	height: 100%;
 	background-image: url("../images/backgrounds/astroids.png");
+	background-size: cover;
+	z-index: 0;
 }
 
 #mainContent > .container {
@@ -53,7 +55,11 @@ body,html{
 
 /*-----Side Bar-----*/
 #sideBar {
-
+	z-index: 1;
+	position: fixed;
+	top:0px;
+	width:70%;
+	height: 100%;
 }
 
 #sideBar > .container {
