--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ body,html{
 	height: 100%;
 	background-image: url("../images/backgrounds/astroids.png");
 	background-size: cover;
+	background-position: center;
 	z-index: 0;
 }
 
