--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 div {
-	border:1px solid black;
+	border:1px solid white;
 }
 
 body,html{
@@ -24,7 +24,6 @@ body,html{
 	height: 100%;
 	background-image: url("../images/backgrounds/astroids.png");
 	background-size: cover;
-	background-position: center;
 	z-index: 0;
 }
 
@@ -55,12 +54,31 @@ body,html{
 }
 
 /*-----Side Bar-----*/
+#sideblur {
+	width:70%;
+    height:100%;
+    position: fixed;
+    top:-100px;
+    left:00px;
+    z-index: 1;
+    top:0px;
+    background-image:url("../images/backgrounds/astroids.png");
+    background-size:cover;
+    -webkit-filter: blur(10px);
+    -moz-filter: blur(10px);
+    -ms-filter: blur(10px);
+    -o-filter: blur(10px);
+    filter: blur(10px);
+}
+}
+
 #sideBar {
-	z-index: 1;
+	z-index: 2;
 	position: fixed;
 	top:0px;
 	width:70%;
 	height: 100%;
+	-webkit-filer: blur(15px);
 }
 
 #sideBar > .container {
