--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-div {
+#sideBar {
 	border:1px solid white;
 }
 
@@ -54,39 +54,40 @@ body,html{
 }
 
 /*-----Side Bar-----*/
-#sideblur {
+#sideBar {
+	z-index: 3;
+	position: fixed;
 	width:70%;
-    height:100%;
-    position: fixed;
-    top:-100px;
-    left:00px;
-    z-index: 1;
+    height:103%;
     top:0px;
+    left: 0px;
+	padding-right:0px;
+}
+
+#sideBar > .container {
+	border-right:5px solid white;
+}
+
+#sideBlur {
+	width:102%;
+    height:100%;
     background-image:url("../images/backgrounds/astroids.png");
     background-size:cover;
+    position: absolute;
+    z-index: -1;
+    top:-10px;
+    left:-10px;
     -webkit-filter: blur(10px);
     -moz-filter: blur(10px);
     -ms-filter: blur(10px);
     -o-filter: blur(10px);
     filter: blur(10px);
 }
-}
-
-#sideBar {
-	z-index: 2;
-	position: fixed;
-	top:0px;
-	width:70%;
-	height: 100%;
-	-webkit-filer: blur(15px);
-}
-
-#sideBar > .container {
-
-}
 
 #sideHeader {
-
+	width: 100%;
+	height: 300px;
+	background-color: none;
 }
 
 #sideContentOne {
