--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,18 @@
 
 body,html{
   height:100%;
+ 
+}
+
+body {
+  font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font-weight: 300;
+  letter-spacing: 1px;
+  color: white;
+}
+
+h1 {
+	font-size: 3em;
 }
 
 .container {
@@ -67,8 +79,8 @@ body,html{
 }
 
 #sideBar > .container {
-	border-right:15px solid white;
-		overflow: scroll;
+	border-right:15px solid;
+	border-color: rgba(255,255,255,.8);
 }
 
 #sideBlur {
@@ -88,27 +100,26 @@ body,html{
 }
 
 #sideHeader {
-	height: 35%;
+	height: 30%;
 	border: 5px solid red;
 }
 
+#sideHeader > h1 {
+	float: right;
+}
+
 #sideContentOne {
-	height: 35%;
+	height: 30%;
 	border: 5px solid red;
 }
 
 #sideContentTwo {
-	height: 35%;
-	border: 5px solid red;
-}
-
-#sideContentThree {
-	height: 35%;
+	height: 30%;
 	border: 5px solid red;
 }
 
 #footerBar {
-	height: 20%;
+	height: 10%;
 	border: 5px solid red;
 }
 
