--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,8 @@ h2 {
 
 #sideBar-button {
 	float: left;
+	visibility: visible;
+	position: relative;
 }
 
 #titleBar {
@@ -77,7 +79,7 @@ h2 {
 	width:70%;
     height:103%;
     top:0px;
-    left: 0px;
+    left: -950px;
 	padding-right:0px;
 }
 
@@ -125,7 +127,7 @@ h2 {
 	height: 380px;
 	width: 380px;
 	border-radius: 190px;
-	background-color: rgba(0,0,0,.3);
+	background-color: rgba(105,0,0,.1);
 	box-shadow: 0px 0px 15px 3px black;
 	padding: 50px;
 }
@@ -147,6 +149,12 @@ h2 {
 	height: 10%;
 }
 
+/*-----jQuery Toggles-----*/
+.button-left {
+	left: 700px;
+}
 
+.frame-left {
+	left: 0px !important;
+}
 
-	
