--- a/css/style.css
+++ b/css/style.css
@@ -38,9 +38,9 @@ h2 {
 #mainContent {
 	width: 100%;
 	height: 100%;
-	background-image: url("../images/backgrounds/astroids.png");
+	background-image: url("../images/backgrounds/mainBackground.png");
 	background-size: cover;
-	background-position: center;
+	background-position: bottom;
 	z-index: 0;
 }
 
@@ -91,17 +91,13 @@ h2 {
 #sideBlur {
 	width:102%;
     height:100%;
-    background-image:url("../images/backgrounds/astroids.png");
+    background-image:url("../images/backgrounds/sideBarBackground.png");
     background-size:cover;
+    background-position: bottom;
     position: absolute;
     z-index: -1;
     top:-10px;
     left:-10px;
-    -webkit-filter: blur(15px);
-    -moz-filter: blur(15px);
-    -ms-filter: blur(15px);
-    -o-filter: blur(15px);
-    filter: blur(15px);
 }
 
 #sideHeader {
