--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ h1 {
 }
 
 h2 {
-	font-size: 3em;
+	font-size: 3.5em;
 }
 .container {
 	padding-right: 0px;
@@ -118,16 +118,21 @@ h2 {
 	display: inline-block;
 	right: 100px;
 	bottom: 170px;
+	background-color: rgba(0,0,0,.3);
+	border-bottom-right-radius: 380px;
+	padding:0px 80px 50px 0px;
 }
 
 #sideBarLogo img {
 	height: 480px;
 	width: 480px;
 	border-radius: 240px;
-	background-color: rgba(255,255,255,.1);
-	border:20px solid #913d32;
+	background-color: rgba(255,240,165,1);
+	border:30px solid #8E2800;
 	box-shadow: 0px 0px 15px 2px black;
-	padding: 80px;
+	opacity: .7;
+	padding: 60px;
+	opacity: .8;
 }
 
 .contentTitle {
