--- a/css/style.css
+++ b/css/style.css
@@ -154,21 +154,42 @@ h2 {
 
 }
 .memberBlock {
-	height: 200px;
-	margin:4% 2%;
+	height: 210px;
+	margin:4% 2% 0% 2%;
 	width:65%;
 	border-radius: 105px;
 	display: inline-block;
-	border:1px solid white;
+	position: relative;
+	background-color: rgba(0,0,0,.5);
+}
+
+.memberAdd {
+	width: 210px;
 }
 
 .memberBlock > img {
-	width: 180px;
-	height: 180px;
+	width: 190px;
+	height: 190px;
 	padding:0px;
 	margin: 10px;
-	border:5px solid black;
-	border-radius: 90px;
+	opacity: .9;
+	border-radius: 95px;
+	display: inline-block;
+}
+
+.memberAdd > img {
+	opacity: .4;
+	width: 190px;
+	height:190px;
+	padding:25px;
+}
+
+.memberName {
+	font-size: 3em;
+	display: inline-block;
+	position: absolute;
+	top:58px;
+	right:40px;
 }
 
 /*-----jQuery Toggles-----*/
