--- a/css/style.css
+++ b/css/style.css
@@ -153,15 +153,15 @@ h2 {
 	padding:20px;
 }
 #sideContentOne {
-	height: 33%;
+	height: 500px;
 }
 
 #sideContentTwo {
-	height: 21%;
+	height: 310px;
 }
 
-#footerBar {
-	height: 30%;
+#nav {
+	height: 530px;
 }
 
 /*-----Content blocks-----*/
@@ -233,6 +233,35 @@ h2 {
 	text-align: center;
 }
 
+/*-----Navigation-----*/
+#nav {
+	white-space: normal;
+	text-align: center;
+}
+.navButton {
+	margin:15px 20px 0px;
+	display: inline-block;
+	position: relative;
+	text-align: center;
+	font-size: 2.5em;
+	width: 170px;
+	white-space: normal;
+}
+
+.navButton img {
+	width:170px;
+	height:170px;
+	-webkit-filter: invert(1);
+	filter: invert(1);
+	opacity: .6;
+	background-color: rgba(30,30,30,1);
+	border-radius: 40px;
+	padding:30px;
+}
+
+.navButton span {
+
+}
 /*-----jQuery Toggles-----*/
 .button-left {
 	left: 700px;
