--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-#sideBar {
-	border:1px solid white;
-}
-
 body,html{
 	height:100%;
  	overflow: hidden;
@@ -54,9 +50,13 @@ h2 {
 }
 
 #sideBar-button {
-	float: left;
 	visibility: visible;
-	position: relative;
+	position: absolute;
+	z-index:;
+	top: 0px;
+	left: 950px;
+	-webkit-transition: left 5s;
+    transition: left 5s;
 }
 
 #sideBar-button img {
@@ -66,6 +66,8 @@ h2 {
 	margin-top: 20px;
 	background-color: rgba(255,255,255,.3);
 	border-radius: 60px;
+	-webkit-transition: left 5s;
+    transition: left 5s;
 }
 
 #titleBar h1 {
@@ -95,7 +97,7 @@ h2 {
 #sideBar {
 	z-index: 3;
 	position: fixed;
-	width:70%;
+	width:676px;
     height:103%;
     top:0px;
     left: -950px;
@@ -103,7 +105,8 @@ h2 {
 	background-image:url("../images/backgrounds/sideBarBackground.png");
     background-size:cover;
     background-position: top left;
-    overflow: hidden;
+    -webkit-transition: left .5s;
+    transition: left .5s;
 }
 
 #sideBar > .container {
@@ -188,7 +191,13 @@ h2 {
 
 .memberAdd {
 	width: 210px;
-	opacity: .7;
+	opacity: .5;
+}
+
+.memberAdd img {
+	height: 210px;
+	width: 210px;
+
 }
 
 .memberBlock .profilePic {
@@ -209,21 +218,9 @@ h2 {
 	right:40px;
 }
 
-.memberOpen {
-	height: 210px;
-	margin:4% 2% 0% 2%;
-	width:65%;
-	border-radius: 105px;
-	display: inline-block;
-	position: relative;
-	background-color: rgba(0,0,0,.5);
-	overflow: hidden;
-}
-
 .memberOpen .profilePic {
 	position: relative;
-	left: 230px;
-	opacity: 1;
+	left: 225px;
 	-webkit-transform: rotate(27deg);
     transform: rotate(27deg);
 }
@@ -238,7 +235,6 @@ h2 {
 	height:210px;
 	padding:70px 15px;
 	background-color: rgba(255,0,0,.3);
-/*	box-shadow: -10px 0px 35px 3px black inset;*/
 	opacity: .8;
 
 }
@@ -321,9 +317,6 @@ h2 {
 
 }
 /*-----jQuery Toggles-----*/
-.button-left {
-	left: 700px;
-}
 
 .frame-left {
 	left: 0px !important;
